--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,181 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --text-50: #ffe5e5;
+    --text-100: #ffcccc;
+    --text-200: #ff9999;
+    --text-300: #ff6666;
+    --text-400: #ff3333;
+    --text-500: #ff0000;
+    --text-600: #cc0000;
+    --text-700: #990000;
+    --text-800: #660000;
+    --text-900: #330000;
+    --text-950: #1a0000;
+
+    --background-50: #f2f2f2;
+    --background-100: #e6e6e6;
+    --background-200: #cccccc;
+    --background-300: #b3b3b3;
+    --background-400: #999999;
+    --background-500: #808080;
+    --background-600: #666666;
+    --background-700: #4d4d4d;
+    --background-800: #333333;
+    --background-900: #1a1a1a;
+    --background-950: #0d0d0d;
+
+    --primary-50: #f2f2f2;
+    --primary-100: #e6e6e6;
+    --primary-200: #cccccc;
+    --primary-300: #b3b3b3;
+    --primary-400: #999999;
+    --primary-500: #808080;
+    --primary-600: #666666;
+    --primary-700: #4d4d4d;
+    --primary-800: #333333;
+    --primary-900: #1a1a1a;
+    --primary-950: #0d0d0d;
+
+    --secondary-50: #f2f2f2;
+    --secondary-100: #e6e6e6;
+    --secondary-200: #cccccc;
+    --secondary-300: #b3b3b3;
+    --secondary-400: #999999;
+    --secondary-500: #808080;
+    --secondary-600: #666666;
+    --secondary-700: #4d4d4d;
+    --secondary-800: #333333;
+    --secondary-900: #1a1a1a;
+    --secondary-950: #0d0d0d;
+
+    --accent-50: #ebf9ee;
+    --accent-100: #d7f4de;
+    --accent-200: #afe9bd;
+    --accent-300: #88dd9c;
+    --accent-400: #60d27b;
+    --accent-500: #38c759;
+    --accent-600: #2d9f48;
+    --accent-700: #227736;
+    --accent-800: #165024;
+    --accent-900: #0b2812;
+    --accent-950: #061409;
+  }
+  .dark {
+    --text-50: #1a0000;
+    --text-100: #330000;
+    --text-200: #660000;
+    --text-300: #990000;
+    --text-400: #cc0000;
+    --text-500: #ff0000;
+    --text-600: #ff3333;
+    --text-700: #ff6666;
+    --text-800: #ff9999;
+    --text-900: #ffcccc;
+    --text-950: #ffe5e5;
+
+    --background-50: #0d0d0d;
+    --background-100: #1a1a1a;
+    --background-200: #333333;
+    --background-300: #4d4d4d;
+    --background-400: #666666;
+    --background-500: #808080;
+    --background-600: #999999;
+    --background-700: #b3b3b3;
+    --background-800: #cccccc;
+    --background-900: #e6e6e6;
+    --background-950: #f2f2f2;
+
+    --primary-50: #0d0d0d;
+    --primary-100: #1a1a1a;
+    --primary-200: #333333;
+    --primary-300: #4d4d4d;
+    --primary-400: #666666;
+    --primary-500: #808080;
+    --primary-600: #999999;
+    --primary-700: #b3b3b3;
+    --primary-800: #cccccc;
+    --primary-900: #e6e6e6;
+    --primary-950: #f2f2f2;
+
+    --secondary-50: #0d0d0d;
+    --secondary-100: #1a1a1a;
+    --secondary-200: #333333;
+    --secondary-300: #4d4d4d;
+    --secondary-400: #666666;
+    --secondary-500: #808080;
+    --secondary-600: #999999;
+    --secondary-700: #b3b3b3;
+    --secondary-800: #cccccc;
+    --secondary-900: #e6e6e6;
+    --secondary-950: #f2f2f2;
+
+    --accent-50: #061409;
+    --accent-100: #0b2812;
+    --accent-200: #165024;
+    --accent-300: #227736;
+    --accent-400: #2d9f48;
+    --accent-500: #38c759;
+    --accent-600: #60d27b;
+    --accent-700: #88dd9c;
+    --accent-800: #afe9bd;
+    --accent-900: #d7f4de;
+    --accent-950: #ebf9ee;
   }
 }
 
+@import url("https://fonts.googleapis.com/css?family=Trochut:700|Encode Sans Semi Expanded:400");
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Encode Sans Semi Expanded";
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Trochut";
+  font-weight: 700;
+}
+
+html {
+  font-size: 100%;
+} /* 16px */
+
+h1 {
+  font-size: 4.21rem; /* 67.36px */
+}
+
+h2 {
+  font-size: 3.158rem; /* 50.56px */
+}
+
+h3 {
+  font-size: 2.369rem; /* 37.92px */
+}
+
+h4 {
+  font-size: 1.777rem; /* 28.48px */
+}
+
+h5 {
+  font-size: 1.333rem; /* 21.28px */
+}
+
+small {
+  font-size: 0.75rem; /* 12px */
+}
+
+/* my styles */
+
+:root {
+  @apply text-text-950;
+}
+
+body {
+  @apply bg-background-50;
 }
