--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css?family=Poppins:700|Poppins:400");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+
+.material-symbols-outlined {
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
+}
 
 @layer base {
   :root {
-    --body-font: "Poppins", sans-serif;
-    --heading-font: "Poppins", serif;
-
     --text: hsl(0, 0%, 0%);
     --background: hsl(24, 33%, 97%);
     --primary: hsl(203, 34%, 49%);
@@ -18,7 +23,7 @@
 
   .dark {
     --text: hsl(0, 0%, 100%);
-    --background: hsl(24, 33%, 3%);
+    --background: hsl(24, 33%, 5%);
     --primary: hsl(203, 34%, 51%);
     --secondary: hsl(23, 32%, 14%);
     --accent: hsl(203, 34%, 54%);
@@ -53,23 +58,28 @@
     font-weight: 700;
   }
 
-  h1 {
+  h1,
+  .h1 {
     font-size: 4.21rem; /* 67.36px */
   }
 
-  h2 {
+  h2,
+  .h2 {
     font-size: 3.158rem; /* 50.56px */
   }
 
-  h3 {
+  h3,
+  .h3 {
     font-size: 2.369rem; /* 37.92px */
   }
 
-  h4 {
+  h4,
+  .h4 {
     font-size: 1.777rem; /* 28.48px */
   }
 
-  h5 {
+  h5,
+  .h5 {
     font-size: 1.333rem; /* 21.28px */
   }
 
